C2LC-588: Fixed section heading bottom border colour in contrast theme.

--- a/src/Themes.scss
+++ b/src/Themes.scss
@@ -1806,6 +1806,10 @@ body.contrast-theme {
         box-shadow: 0px 3px 1px #9DA4AF;
     }
 
+    .App__command-palette-section-heading-container {
+        border-bottom: 2px solid #FFFFFF;
+    }
+
     .App__command-palette-section-heading {
         color: #FFFFFF;
     }
